--- a/content/posts/2023-09_first.md
+++ b/content/posts/2023-09_first.md
@@ -2,8 +2,9 @@
 title = 'My First Post'
 date = 2023-09-15T17:23:04+10:00
 draft = false
-categories = ['development', 'publishing']
-tags = ['hugo','content']
+xcategories = ['development', 'publishing']
+categories = []
+tags = ['operations','security']
 +++
 
 ## Introduction
