--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -3,7 +3,7 @@ title = 'Launch of Cloud IT & Security Practice'
 date = 2023-09-19T17:05:31+10:00
 draft = false
 categories = []
-tags = ['day to day', 'blog']
+tags = ['daily life', 'blog', 'launch']
 +++
 
 ## Welcome!
@@ -16,18 +16,20 @@ Today I'll be doing a few things:
 
 ### Blogs
 
-For someone who was online in the 90s before www was the only protocol that mattered, the fact that blogs are still a thing is somthing of a surprise.  They've existed in some form throughout the time I've spent online but the experience has been quite circuitous. The journey from Usenet to static web pages (with under construction gifs and blinking tags) to chat clients, spending days downloading linux distributions and cgi-bin travails, and eventually to hosted blogs, with RSS feeds was already a long one. 
+For someone who was online in the 90s before www was the only protocol that mattered, the fact that blogs are still a thing is something of a surprise.  People broadcasting their thoughts as a concept has existed in some form throughout the time I've been online but the experience of that has been quite varied. The journey from Usenet to static web pages (with under construction gifs and blinking tags) to chat clients, spending days downloading linux distributions and cgi-bin travails, and eventually to hosted blogs, with RSS feeds was a long one. 
 
-But then the extended period social media domination and some recent incursions by walled gardens like Medium and then more recently the dismantling of twitter.  In the meantime open protocols such as ActivityPub have puttered along and putting more value in controlling your own content has put some life back into the thing formally known as blogs (but still just a  blog).  So here I am with a bunch of static markdown files that can be hosted easily and connected via api into commercial spaces like LinkedIn / Medium or decentralised ones like Mastadon. Seems like not much has changed after all. 
+But then came the extended period of social media domination and some recent incursions by walled gardens like Medium and then more recently the dismantling of Twitter which has caused some consternation and instability.  In the meantime open protocols such as ActivityPub have puttered along and putting more stock in controlling your own content has put life back into the thing formally known as blogs.  So here I am with a bunch of static markdown files that can be hosted easily and connected via api into commercial spaces like LinkedIn / Medium or decentralised ones like Mastadon. Seems like not much has changed after all. 
 
 
 ### What's the point of this?
 
 I’ve worked for tech businesses for over 20 years. They've all followed a similar archetype: integration of 3rd party data-sources, data processing and algorithms, and finally delivery of a service via web.  In most cases the service involves communicating non-trivial insights through visualisations which are a deeply considered. And the product magic is working out how expert users then use those insights to drive decision making, and then making those insights more readily available to non-expert users.  Some version of, instead of *providing information to your users so they can make a decision*, just working out *what the best decision would be, advising that, and then where possible providing sufficient supporting information to provide confidence in the guidance*. 
 
-Starting as a software engineer, transitioning through engineering management, to product and general management, and more recently IT, cloud and security I've bridged the gammet of internal, customer facing, operational, commercial and financial areas. Mostly filling a role which enables cross-functional effectiveness to achieve a business or strategic outcome.  I'm driven by a desire to have meaning in my work and to understand the broader context it is enabling.  I'm also an engineer at heart and use tooling and automation where possible to work smarter rather than harder.
+Starting as a software engineer, transitioning through engineering management, to product and general management, and more recently IT, cloud and security I've bridged the gammet of internal, customer facing, operational, commercial and financial areas. Mostly filling a role which enables cross-functional effectiveness to achieve a business or strategic outcome.  I'm driven by a desire to have meaning in my work, to understand the broader context it is enabling and for that mission to align with my values on how to improve the world.  
 
-It's always been a **team sport**.  I've always taken pride in enjoying going to work and largely that is driven by having colleagues who you appreciate spending time with. The continual engagement of learning from those you can, and providing guidance to those you can is deeply rewarding.  And the insight that an individual contributor is more limited in how much value they can add whereas a manager and leader can influence others to providing further leverage to what they can achieve is fundamental. 
+I'm also an engineer at heart and use tooling where possible to work smarter rather than harder.  The satisfaction of automation and knowing how you're able to accelerate the output of your work provides a value far beyond the effort taken to enable it. 
+
+But fundamentally it's always been a **team sport**.  I've always taken pride in enjoying going to work and largely that is driven by having colleagues who you appreciate spending time with. The continual engagement of learning from people with a diverse range of experiences beyond your own, and providing guidance to those you can is deeply rewarding.  And the insight that an individual contributor is limited in how much value they can add whereas a manager and leader can influence others to providing far greater value to what they can achieve is fundamental. 
 
 ### Working in public
 
