--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -14,9 +14,12 @@ Today I'll be doing a few things:
 - Creating a record of some of my work and strategies to solve problems that I've come up with over the last 20 years
 - Attempting to kick-start a habit to write (in public) more frequently
 
+logo
+![image alt text](/images/logo.png)
+
 ### Blogs
 
-For someone who was online in the 90s before www was the only protocol that mattered, the fact that blogs are still a thing is something of a surprise.  People broadcasting their thoughts as a concept has existed in some form throughout the time I've been online but the experience of that has been quite varied. The journey from Usenet to static web pages (with under construction gifs and blinking tags) to chat clients, spending days downloading linux distributions and cgi-bin travails, and eventually to hosted blogs, with RSS feeds was a long one. 
+For someone who was online in the 90s before www was the only protocol that mattered, the fact that blogs are still a thing is something of a surprise.  People broadcasting their thoughts as a concept has existed in some form throughout the time I've been online but the experience of that has been quite varied. The journey from Usenet to static web pages (with under construction gifs and blinking tags) to chat clients, spending days downloading linux distributions and cgi-bin travails, and eventually to hosted blogs like Movable Type and Blogger, with the RSS feeds that unified them all was a long one. RIP Google Reader.
 
 But then came the extended period of social media domination and some recent incursions by walled gardens like Medium and then more recently the dismantling of Twitter which has caused some consternation and instability.  In the meantime open protocols such as ActivityPub have puttered along and putting more stock in controlling your own content has put life back into the thing formally known as blogs.  So here I am with a bunch of static markdown files that can be hosted easily and connected via api into commercial spaces like LinkedIn / Medium or decentralised ones like Mastadon. Seems like not much has changed after all. 
 
