--- a/content/posts/2023-09-02_markdown.md
+++ b/content/posts/2023-09-02_markdown.md
@@ -1,5 +1,5 @@
 +++
-title = 'Why Markdown'
+title = 'Markdown'
 date = 2023-09-08T17:07:16+10:00
 draft = false
 categories = []
@@ -21,7 +21,7 @@ The [project](https://daringfireball.net/projects/markdown/) was created by Josh
 
 > It’s my hope that [the mailing list](https://pairlist6.pair.net/pipermail/markdown-discuss/) will lead to good ideas for future improvements to Markdown.  
 
-Anyway - here we are and it's now more broadly used than ever and has become the defactor standard for entering lightly decorated text into a website form.  There are various extensions, work-arounds and [hacks](https://www.markdownguide.org/hacks/) but these aren't things I care about greatly.
+Anyway - here we are and it's now more broadly used than ever and has become the defacto standard for typing lightly decorated text into a website form.  There are various extensions, work-arounds and [hacks](https://www.markdownguide.org/hacks/) but these aren't things I care about greatly.
 
 In my case it's also become part of an [interesting pattern to create static websites](https://www.reddit.com/r/selfhosted/comments/vcaku9/basic_blog_based_on_static_markdown_files/). There are a bunch of libraries now that allow blogs like this to be published on static hosting platforms such as GitHub.  There are also many clients for writing Markdown which make it simple to work with. 
 
