--- a/content/posts/2023-09-02_markdown.md
+++ b/content/posts/2023-09-02_markdown.md
@@ -1,28 +1,25 @@
 +++
-title = 'Markdown'
+title = 'Why Markdown?'
 date = 2023-09-08T17:07:16+10:00
 draft = false
 categories = []
 tags = ['markdown', 'blog']
 +++
 
+Markdown is a solution to allow simple plain text to appear with mark-up when rendered on a target platform.  You can indicate titles or bold / italic emphasis with simple patterns that are quick to learn and reasonably easy to use.  Typically the writing of the text would be somewhere that is expected to be processed further (like on a form to reply to a thread in a web forum).  And because this is apparently an *impossibly hard problem to solve* therefore we (the humans) must solve this for the machines with these additional characters sprinkled through our plain text. 
 
-It seems bizarre to me that Markdown is more popular now than ever.  How did this happen?  It seems quite primitive that you'd write *italics* in this way:
+This seemed quite reasonable 20 years ago when browser compability and modern HTML / Javascript techniques had not converged.  But it is bizarre to me that Markdown is more popular now than ever.  How did this happen?  It seems quite primitive that you'd be writing *italics* in this way:
 
 ```markdown
 *italics*
 ```
 
-but on reflection before (ascii) emojis emphasising text with astericks did seem a common place thing to do. 
+The first time I paid any attention to Markdown came via [Jeff Atwood](https://blog.codinghorror.com/is-html-a-humane-markup-language/) and his efforts to use Markdown in the new [developer website](http://stackoverflow.com) he and Joel Spolsky were creating.  They documented their efforts through their own blogs and a podcast they hosted.  It caused some [controversy](https://www.reddit.com/r/programming/comments/ajj7k/jeff_atwood_calls_out_markdown_creator_john/) at the time.
 
-The first time I paid any attention to Markdown came via [Jeff Atwood](https://blog.codinghorror.com/is-html-a-humane-markup-language/) and his efforts to use Markdown in this new [developer website](http://stackoverflow.com) he and Joel Spolsky were creating.  This caused some [controversy](https://www.reddit.com/r/programming/comments/ajj7k/jeff_atwood_calls_out_markdown_creator_john/) at the time.
-
-The [project](https://daringfireball.net/projects/markdown/) was created by Josh Gruber and it's impressive to note that not much has changed since then despite this open invitation from the author:
+The [Markdown project](https://daringfireball.net/projects/markdown/) was created by Josh Gruber and it's impressive to note that not much has changed since then despite this open invitation from the author:
 
 > It’s my hope that [the mailing list](https://pairlist6.pair.net/pipermail/markdown-discuss/) will lead to good ideas for future improvements to Markdown.  
 
 Anyway - here we are and it's now more broadly used than ever and has become the defacto standard for typing lightly decorated text into a website form.  There are various extensions, work-arounds and [hacks](https://www.markdownguide.org/hacks/) but these aren't things I care about greatly.
 
-In my case it's also become part of an [interesting pattern to create static websites](https://www.reddit.com/r/selfhosted/comments/vcaku9/basic_blog_based_on_static_markdown_files/). There are a bunch of libraries now that allow blogs like this to be published on static hosting platforms such as GitHub.  There are also many clients for writing Markdown which make it simple to work with. 
-
-Very cool!
+But of course it is more confusing than ever in the light of the magic of AI/ML that this is still a thing that has a place in the world.  In my case it's become part of an [interesting pattern to create static websites](https://www.reddit.com/r/selfhosted/comments/vcaku9/basic_blog_based_on_static_markdown_files/). There are many libraries that allow blogs like this one to be published on static hosting platforms such as GitHub.  There are also many clients for writing Markdown which means actually you don't need to manually add the *'s and the #'s unless you really want to.
