--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -36,7 +36,11 @@ But fundamentally it's always been a **team sport**.  I've always taken pride in
 
 ### Working in public
 
-Building positive habits (or combatting negative ones) is not easy and the pay-off is incremental and hard to discern at first.  But outcomes are real and they are worth striving for. I'm deliberately trying to avoid external validation for this work and will not push to create engagement via social media or comments in-line.  But doing something with public visiblity creates a forcing function which I hope to be a positive driver for this exercise.  Let's see how it goes.  
+Building positive habits (or combatting negative ones) is not easy and the pay-off is incremental and hard to discern at first.  But the outcomes are real and are worth striving for. I'm going to try avoiding external validation for this and will not push to create artificial "engagement".  But doing something with public visiblity creates a forcing function which I hope to be a positive driver for my goals.  
+
+Perhaps it goes without saying but I will be avoiding Chat-GPT and the like.  The point of this  among other things is a personal writing exercise and not summarising existing content or contributing to the morass of AI generated cruft. 
+
+Let's see how it goes.  
 
 
 
