updated content with images

--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -14,8 +14,8 @@ Today I'll be doing a few things:
 - Creating a record of some of my work and strategies to solve problems that I've come up with over the last 20 years
 - Attempting to kick-start a habit to write (in public) more frequently
 
-logo
-![image alt text](/images/logo.png)
+
+![logo](/images/logo.png)
 
 ### Blogs
 
@@ -42,5 +42,5 @@ Perhaps it goes without saying but I will be avoiding Chat-GPT and the like.  Th
 
 Let's see how it goes.  
 
-
+![At the computer](/images/caveman_computer.jpg)
 
