--- a/content/posts/2023-09-02_markdown.md
+++ b/content/posts/2023-09-02_markdown.md
@@ -6,6 +6,8 @@ categories = []
 tags = ['markdown', 'blog']
 +++
 
+![Reading](/images/caveman_reading.jpg)
+
 Markdown is a solution to allow simple plain text to appear with mark-up when rendered on a target platform.  You can indicate titles or bold / italic emphasis with simple patterns that are quick to learn and reasonably easy to use.  Typically the writing of the text would be somewhere that is expected to be processed further (like on a form to reply to a thread in a web forum).  And because this is apparently an *impossibly hard problem to solve* therefore we (the humans) must solve this for the machines with these additional characters sprinkled through our plain text. 
 
 This seemed quite reasonable 20 years ago when browser compability and modern HTML / Javascript techniques had not converged.  But it is bizarre to me that Markdown is more popular now than ever.  How did this happen?  It seems quite primitive that you'd be writing *italics* in this way:
