more posts per page, content updates

--- a/content/posts/2023-11-01_strategy.md
+++ b/content/posts/2023-11-01_strategy.md
@@ -1,7 +1,9 @@
 +++
-title = '2023 11 01_strategy'
+title = 'Strategy vs Execution'
 date = 2023-10-12T12:46:01+11:00
 draft = true
+categories = []
+tags = ['strategy']
 +++
 
 TBD
