Use full path for images

--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -42,5 +42,5 @@ Perhaps it goes without saying but I will be avoiding Chat-GPT and the like.  Th
 
 Let's see how it goes.  
 
-![At the computer](/images/caveman_computer.jpg)
+![At the computer](https://toobstar.github.io/images/caveman_computer.jpg)
 
