full image paths

--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -15,7 +15,7 @@ Today I'll be doing a few things:
 - Attempting to kick-start a habit to write (in public) more frequently
 
 
-![logo](/images/logo.png)
+![logo](https://toobstar.github.io/images/logo.png)
 
 ### Blogs
 
