--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -11,17 +11,17 @@ tags = ['daily life', 'blog', 'launch']
 Today I'll be doing a few things:
 
 - Launching a new website
-- Creating a record of some of my work and strategies to solve problems that I've come up with over the last 20 years
-- Attempting to kick-start a habit to write (in public) more frequently
+- Creating a record of some of my work and strategies to solve problems that I've come up
+- Kick-starting a habit to write (in public) more frequently
 
 
 ![logo](https://toobstar.github.io/images/logo.png)
 
 ### Blogs
 
-For someone who was online in the 90s before www was the only protocol that mattered, the fact that blogs are still a thing is something of a surprise.  People broadcasting their thoughts as a concept has existed in some form throughout the time I've been online but the experience of that has been quite varied. The journey from Usenet to static web pages (with under construction gifs and blinking tags) to chat clients, spending days downloading linux distributions and cgi-bin travails, and eventually to hosted blogs like Movable Type and Blogger, with the RSS feeds that unified them all was a long one. RIP Google Reader.
+For someone who was online in the 90s before WWW was the only protocol that mattered, the fact that blogs are still a thing is something of a surprise.  People broadcasting their thoughts as a concept has existed in some form throughout the time I've been online but the experience of that has been quite varied. The journey from Usenet to static web pages (with under construction gifs and blinking tags) to chat clients, spending days downloading linux distributions and cgi-bin travails, and eventually to hosted blogs like Movable Type and Blogger, with the RSS feeds that unified them all was a long one. RIP Google Reader.
 
-But then came the extended period of social media domination and some recent incursions by walled gardens like Medium and then more recently the dismantling of Twitter which has caused some consternation and instability.  In the meantime open protocols such as ActivityPub have puttered along and putting more stock in controlling your own content has put life back into the thing formally known as blogs.  So here I am with a bunch of static markdown files that can be hosted easily and connected via api into commercial spaces like LinkedIn / Medium or decentralised ones like Mastadon. Seems like not much has changed after all. 
+But then came the extended period of social media domination and some recent incursions by walled gardens like Medium and more recently the dismantling of Twitter which has caused [some consternation](https://www.ben-evans.com/benedictevans/2023/10/23/leaving-twitter) and uncertainty.  In the meantime open protocols such as [ActivityPub](https://en.wikipedia.org/wiki/ActivityPub) have puttered along and putting more stock in controlling your own content has put life back into the thing formally known as blogs.  So here I am with a bunch of static markdown files that can be hosted easily and connected via api into commercial spaces like LinkedIn / Medium or decentralised ones like [Mastadon](https://www.theverge.com/2023/4/20/23689570/activitypub-protocol-standard-social-network). Seems like not much has changed after all. 
 
 
 ### What's the point of this?
@@ -36,9 +36,11 @@ But fundamentally it's always been a **team sport**.  I've always taken pride in
 
 ### Working in public
 
-Building positive habits (or combatting negative ones) is not easy and the pay-off is incremental and hard to discern at first.  But the outcomes are real and are worth striving for. I'm going to try avoiding external validation for this and will not push to create artificial "engagement".  But doing something with public visiblity creates a forcing function which I hope to be a positive driver for my goals.  
+Building positive habits (or combatting negative ones) is not easy and the pay-off is incremental and hard to discern at first.  But the outcomes are real and are worth striving for. But doing something with public visiblity creates a forcing function which I hope to be a positive driver for my goals.  
 
 Perhaps it goes without saying but I will be avoiding Chat-GPT and the like.  The point of this  among other things is a personal writing exercise and not summarising existing content or contributing to the morass of AI generated cruft. 
+
+Finally I will be editing and revising as I go.  There may be timestamps on articles but I won't respect them! I'd rather get to a canonical answer that I'm happy with rather than many versions of some similar content.
 
 Let's see how it goes.  
 
