--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -3,7 +3,7 @@ title = 'Launch of Cloud IT & Security Practice'
 date = 2023-09-01T17:05:31+10:00
 draft = false
 categories = []
-tags = ['daily life', 'blog', 'launch']
+tags = ['daily life', 'blog', 'launch', 'CIO', 'CISO']
 +++
 
 ## Welcome!
@@ -11,7 +11,7 @@ tags = ['daily life', 'blog', 'launch']
 Today I'll be doing a few things:
 
 - Launching a new website
-- Creating a record of some of my work and strategies to solve problems that I've come up
+- Creating a record of some of my work and strategies to solve problems that I've faced
 - Kick-starting a habit to write (in public) more frequently
 
 
