--- a/content/posts/2023-10-09_metrics.md
+++ b/content/posts/2023-10-09_metrics.md
@@ -2,8 +2,8 @@
 title = 'Business Metrics and KPIs'
 date = 2023-10-10T17:13:35+11:00
 draft = true
-categories = []
 tags = ['timesheets', 'cost tracking', 'budgets']
+revision = 1
 +++
 
 There are both internal and external requirements to have clarity around a business and these include compliance (e.g. accounting), fund-raising (e.g. venture capital) or for internal operations through the executive and leadership teams.  In order to do this effectively there are many metrics that are used.  These will focus on either the cost side, the revenue side, or some ratio between the two.  Common examples include: 
