--- a/content/posts/2023-11-01_strategy.md
+++ b/content/posts/2023-11-01_strategy.md
@@ -2,8 +2,8 @@
 title = 'Strategy vs Execution'
 date = 2023-10-12T12:46:01+11:00
 draft = true
-categories = []
 tags = ['strategy']
+revision = 1
 +++
 
 TBD
