--- a/content/posts/2023-09-01_launch.md
+++ b/content/posts/2023-09-01_launch.md
@@ -4,6 +4,7 @@ date = 2023-09-01T17:05:31+10:00
 draft = false
 categories = []
 tags = ['daily life', 'blog', 'launch', 'CIO', 'CISO']
+revision = 1
 +++
 
 ## Welcome!
