--- a/content/posts/2023-09-02_markdown.md
+++ b/content/posts/2023-09-02_markdown.md
@@ -2,8 +2,8 @@
 title = 'Why Markdown?'
 date = 2023-09-08T17:07:16+10:00
 draft = false
-categories = []
 tags = ['markdown', 'blog']
+revision = 1
 +++
 
 ![Reading](https://toobstar.github.io/images/caveman_reading.jpg)
@@ -25,3 +25,5 @@ The [Markdown project](https://daringfireball.net/projects/markdown/) was create
 Anyway - here we are and it's now more broadly used than ever and has become the defacto standard for typing lightly decorated text into a website form.  There are various extensions, work-arounds and [hacks](https://www.markdownguide.org/hacks/) but these aren't things I care about greatly.
 
 But of course it is more confusing than ever in the light of the magic of AI/ML that this is still a thing that has a place in the world.  In my case it's become part of an [interesting pattern to create static websites](https://www.reddit.com/r/selfhosted/comments/vcaku9/basic_blog_based_on_static_markdown_files/). There are many libraries that allow blogs like this one to be published on static hosting platforms such as GitHub.  There are also many clients for writing Markdown which means actually you don't need to manually add the *'s and the #'s unless you really want to.
+
+And finally there are [methods of syndication](https://askcloudarchitech.com/posts/tutorials/auto-generate-post-payload-medium-com/) that use APIs to allow articles to be published on platforms like [Medium](https://medium.com/@TobyVidler).   So actually ... it's still pretty useful. 
