--- a/content/posts/2024-05-17_msp.md
+++ b/content/posts/2024-05-17_msp.md
@@ -9,19 +9,29 @@ revision = 1
 
 ![Business Partnerships](https://toobstar.github.io/images/caveman_meeting2.jpg)
 
-When engaging the services of a vendor you can either do that directly or via a managed service provider (MSP).  Each has pros and cons and it's worth understanding the motivation of each party to understand why you would be better off with one or the other.  
+When engaging the services of a vendor you can either do that directly or via a managed service provider (MSP).  Each has pros and cons and it's worth understanding **the motivation of each party** to understand why you would be better off with one or the other.  
 
-From the **vendor** point of view having a field force that includes sales, account management, onboarding and support can be very expensive if run locally or hard to do remotely.  Finding a local [channel partner](https://en.wikipedia.org/wiki/Channel_partner) to take this risk on can be an effective way to grow a business without being overly extended financially.  Having a vendor encourage you to engage an MSP who will take some percentage of the fees taken seems counter intuitive but where this MSP can grow the business more than their cost it is clearly a net win for both.  To further drive this vendors can structure their commercial model with the MSP such that the more business they do the larger margin they can achieve and have a partner that is highly motivated to both [land and expand](https://blog.hubspot.com/sales/land-and-expand) the services of the vendor. 
+From the **vendor** point of view having a field force that includes sales, account management, onboarding and support can be very expensive if run locally or hard to do remotely.  Finding a local [channel partner](https://en.wikipedia.org/wiki/Channel_partner) to take this risk on can be an effective way to grow their business without being overly extended financially.  Having a vendor encourage you to engage an MSP who will take some percentage of the fees taken seems counterintuitive but where this MSP can grow the business more than their cost it is clearly a net win for both.  To further drive this vendors can structure their commercial model with the MSP such that the more business they do the larger margin they can achieve and have a partner that is highly motivated to both [land and expand](https://blog.hubspot.com/sales/land-and-expand) the services of the vendor.  
 
 For the **MSP** having a portfolio of complementary vendor services to support their customers can be a win-win for both them and their customers when it is done in a thoughtful way.  Having SMEs that can assist in navigating the complexities of I.T. is highly valuable to enterprises.  Additionally where they can build trust as having independence from the vendor they are provisioning they can cut through the marketing fog to ensure the most impactful solutions with the best ROI are selected.  Having a local MSP allows billing to be done in local currency and more easily through invoicing and purchase orders so procurement can also be a driver towards the MSP model.  This means that the MSP takes on the currency foreign exchange risk which might be beneficial to the customer. 
 
-When engaging an MSP it is good to understand what the spectrum of services are that could be utilised:
-- Are they proficient with the vendor and able to provide support beyond what can be obtained directly from the vendor?  For example acting as a simple go-between with support ticketing systems can just add inefficiencies to an already frustrating process.
-- Are they just a "ticket clipper" from a licensing point of view and just providing billing flexibility?  Potentially this is still a worthwhile partnership if expectations are clear.
-- What is the range of services that they offer?  Bundling services that are already engaged can be a way to simplify procurement processes to improve internal operations efficiency.
+With a clearer understanding of the motivations of both the vendor and the MSP it's easier to make the assessment as to what is the best model to achieve the key factors in vendor service delivery (beyond the outcomes of the service itself):
+- Ensuring the best solution is found for the opportunity to be addressed.  i.e the pre-rollout phase. 
+- Support and responding to change.  i.e. the engagement during operations of the service
+- Contracts and procurement.  Ensuring billing is best matched to internal preference and there is clarity around the duration of the engagement and what happens upon the conclusion of that.  
 
-Other points of note to consider:
+Some points to consider when evaluating whether an MSP is able to handle these factors include understanding:
+
+- Are they proficient with the vendor services and able to provide support beyond what can be obtained directly from the vendor?  For example acting as a simple go-between with support ticketing systems can just add inefficiencies to an already frustrating process.
+
+- What is the range of vendors and services that they can facilitate?  Bundling services can be a way to simplify procurement processes to improve internal operations efficiency.
+
+- Are they just a "ticket clipper" from a licensing point of view and simply providing billing flexibility?  Potentially this is still a worthwhile arrangement if expectations are clear.
+
 - Large cloud service provider (CSP) vendors like AWS provide enterprice pricing discounts based on the growth of the bill.  This bill can be juiced (with some limits) by using them as the MSP for other vendors through their marketplace (e.g. [AWS](https://aws.amazon.com/marketplace)). 
+
 - From a supply chain risk point of view any time a new business entity is introduced into the enterprise there is another point of failure.  If the MSP became non-responsive how could that affect the delivery of services from the vendor?  Where the MSP is small and the service from the vendor of higher criticality it is worth ensuring you have an independent communication channel with the vendor to ensure no interruptions to the supply of services will occur in the event of a communication issue between the MSP and the vendor. 
+
+- Where the MSP has access to your service (e.g. for management) or data then obviously security and compliance becomes a relevant consideration.   A supplier risk assessment should be taken as would be done with the vendor themselves that considers the usual factors.
 
  
