--- a/content/posts/2024-05-17_msp.md
+++ b/content/posts/2024-05-17_msp.md
@@ -1,7 +1,7 @@
 +++
 title = 'Managed Service Providers (MSPs)'
 date = 2024-05-17T10:19:25+10:00
-draft = true
+draft = false
 categories = []
 tags = ['CIO', 'IT', 'Cost']
 revision = 1
