more initial drafts

--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -56,3 +56,5 @@ Who uses Datadog?
 Datadog is used by a wide range of organizations, from small startups to large enterprises, across various industries.
 
 If you're looking for a comprehensive monitoring and security solution, Datadog is definitely worth considering.
+
+![Datadog security](https://toobstar.github.io/images/datadog_security.png)
