updated upload artifact lib

--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -8,9 +8,36 @@ revision = 1
 
 ![Visibility and Transparency](https://toobstar.github.io/images/caveman_light.jpg)
 
-### Some history of datadog
+### Application Instrumentation
 
-Usernames & passwords on computers as a model for controlling access have been around for ever (well ... since the 1960s).  In the internet era this evolved to the username just being your email which meant only one additional thing to keep track of.  But as our use of the web exploded and eventually led into more sensitive activities like e-commerce our ability to keep track of passwords quickly fell apart.  This led to common and reused passwords, which led to techniques for brute-force cracking of passwords, which led to password expiration rules, which led to password complexity rules, which led to password management applications.  
+Refers to the process of adding monitoring, logging, and tracing capabilities to an application to collect performance metrics, detect issues, and gain insights into behaviour for understanding usage or audit requirements.  
+
+
+
+
+
+It involves embedding code, using libraries, or employing third-party tools to track key application activities in real time.
+
+Why Use Application Instrumentation?
+Performance Monitoring – Measures response times, latency, throughput, and resource usage.
+Error Detection & Debugging – Helps identify bottlenecks, failures, and exceptions.
+Observability & Logging – Records key events and logs application states for troubleshooting.
+User Experience Optimization – Tracks interactions and improves responsiveness.
+Security Monitoring – Detects suspicious activities or anomalies.
+Types of Application Instrumentation
+Logging – Captures detailed logs of application events.
+Metrics Collection – Gathers numerical data like CPU usage, memory consumption, request rates, etc.
+Tracing – Tracks end-to-end request flow across services (useful in microservices architectures).
+Profiling – Analyzes CPU, memory, and execution times of functions.
+Popular Instrumentation Tools
+APM (Application Performance Monitoring) Tools: New Relic, Datadog, AppDynamics, Dynatrace.
+Logging Frameworks: ELK Stack (Elasticsearch, Logstash, Kibana), Fluentd.
+Distributed Tracing Tools: OpenTelemetry, Jaeger, Zipkin.
+
+
+
+
+### Some history of datadog
 
 Datadog was founded in 2010 by Olivier Pomel and Alexis Lê-Quôc.   
 
