--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -12,6 +12,7 @@ revision = 1
 
 Refers to the process of adding monitoring, logging, and tracing capabilities to an application to collect performance metrics, detect issues, and gain insights into behaviour for understanding usage or audit requirements.  
 
+In the early days of server management the focus was on logs and whilst the number of instances was small and stable this was acceptable, but as the transition to the cloud progressed (& the volumes of logs accelerated) the suitability of a log-centric approach became less practical. 
 
 
 
