dd product image

--- a/content/posts/2024-12-01_datadog.md
+++ b/content/posts/2024-12-01_datadog.md
@@ -1,30 +1,30 @@
 +++
-title = 'Datadog and Modern App Instrumentation'
+title = 'Datadog: Thoughts and Modern App Instrumentation'
 date = 2025-02-03T10:24:33+11:00
 draft = true
 tags = ['Security', 'CISO', 'Cloud', 'SaaS']
 revision = 1
 +++
 
-![Visibility and Transparency](https://toobstar.github.io/images/caveman_light.jpg)
+
+### Overview of Datadog
+
+![Datadog](https://toobstar.github.io/images/caveman_dog.jpeg)
+
+Following my recent post about [application instrumentation](https://toobstar.github.io/posts/2025-02-01_instrumentation/) I was interested to do a deeper dive into [Datadog](https://www.datadoghq.com) which I've now got quite a few years experience with. It's been interesting to me to observe how the offering has expanded over this time and how our use of it crossed a tipping point from promising to extremely useful.
+
+### Some history
+
+Datadog was founded in 2010 and the idea came out of the personal needs of the founders (Olivier Pomel and Alexis Lê-Quôc) working in the tech industry. In the early days Datadog focused on infrastructure monitoring, providing tools to track server performance, network traffic, and other key metrics.   Over time Datadog expanded its offerings to include log management, security monitoring, and application performance monitoring (APM) cability.  I can't say how much of this expansion of the product was internally built but certainly they focussed on [expansion through acquisition ](https://www.datadoghq.com/blog/tag/acquisition/) and appear to have been extremely successful with that strategy.  Salesforce: please take note. 
 
 
+datadog_product_observability
 
 
-
-### Some history of datadog
-
-Datadog was founded in 2010 by Olivier Pomel and Alexis Lê-Quôc.   
-
-Origin: The idea stemmed from their own experiences working in the tech industry. They recognized the need for a comprehensive monitoring and analytics platform for cloud-based workflows.   
-Early Days: Datadog initially focused on infrastructure monitoring, providing tools to track server performance, network traffic, and other key metrics.   
-Growth and Expansion: Over time, Datadog expanded its offerings to include log management, security monitoring, and application performance monitoring.   
-IPO: In 2019, Datadog went public, marking a significant milestone in its growth trajectory.   
 Continued Innovation: Datadog continues to innovate and expand its platform, incorporating machine learning and artificial intelligence to provide more advanced insights and automation capabilities.   
 Essentially, Datadog's history is one of identifying a critical need in the evolving cloud computing landscape and building a successful company around a platform that addresses that need.
 
 
-### Overview of datadog
 
 
 Datadog is a cloud-based monitoring and security service that provides real-time visibility into an organization's entire technology stack.
@@ -58,5 +58,10 @@ Who uses Datadog?
 Datadog is used by a wide range of organizations, from small startups to large enterprises, across various industries.
 
 If you're looking for a comprehensive monitoring and security solution, Datadog is definitely worth considering.
+
+
+
+
+
 
 ![Datadog security](https://toobstar.github.io/images/datadog_security.png)
